--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
     "shortid": "^2.2.6"
   },
   "scripts": {
